objects/AcctSeed__Billing_Line__c.object
<CustomObject>
    <description>Used to document a specific product or service associated with a billing. The aggregation of multiple billing lines constitute a billing record.</description>
    <fields>
        <fullName>Accounting_Period__c</fullName>
        <formula>AcctSeed__Billing__r.AcctSeed__Accounting_Period__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Accounting period that the Billing is in- Set by the Billing parent record</inlineHelpText>
        <label>Accounting Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeedERP__Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Line</label>
        <referenceTo>AcctSeedERP__Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Billing Lines</relationshipLabel>
        <relationshipName>Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing__c</fullName>
        <inlineHelpText>Reference to parent object.</inlineHelpText>
        <label>Billing</label>
        <referenceTo>AcctSeed__Billing__c</referenceTo>
        <relationshipLabel>Billing Lines</relationshipLabel>
        <relationshipName>Project_Billing_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Comment__c</fullName>
        <inlineHelpText>Comment for display on Billing Line.</inlineHelpText>
        <label>Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <inlineHelpText>Date Product or Service was rendered.</inlineHelpText>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Discount_Amt__c</fullName>
        <formula>IF( AcctSeed__List_Price__c=0, 0,AcctSeed__List_Price__c - AcctSeed__Rate__c)</formula>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Discount_Pct__c</fullName>
        <formula>IF( AcctSeed__List_Price__c=0, 0, AcctSeed__Discount_Amt__c / AcctSeed__List_Price__c)</formula>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used for service billings to identify service rendered by an employee.</inlineHelpText>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Expense_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Overrides the expense GL account set on the product in the posting process if populated. This feature requires product costing on the Accounting Settings tab to be enabled.</inlineHelpText>
        <label>Expense GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Billing Lines (Expense GL Account)</relationshipLabel>
        <relationshipName>Billing_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Traditional Sub-General Ledger account segment used to report on divisions, departments, geographies, cost centers, profit centers or business units.</inlineHelpText>
        <label>GL Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Billing Lines (GL Account Variable 1)</relationshipLabel>
        <relationshipName>Billing_Lines2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Traditional Sub-General Ledger account segment used to report on divisions, departments, geographies, cost centers, profit centers or business units.</inlineHelpText>
        <label>GL Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Billing Lines (GL Account Variable 2)</relationshipLabel>
        <relationshipName>Billing_Lines3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Traditional Sub-General Ledger account segment used to report on divisions, departments, geographies, cost centers, profit centers or business units.</inlineHelpText>
        <label>GL Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Billing Lines (GL Account Variable 3)</relationshipLabel>
        <relationshipName>Billing_Lines4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Hours_Units__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Quantity for Product Pricing, Hours for Service pricing.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Inventory_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Overrides the inventory GL account set on the product in the posting process if populated. This feature requires product costing on the Accounting Settings tab to be enabled.</inlineHelpText>
        <label>Inventory GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Billing Lines (Inventory GL Account)</relationshipLabel>
        <relationshipName>Billing_Lines2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Is_VAT_Related__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Populated via code. Checked if the related Tax Group is an Avalara VAT Reporting tax group.</inlineHelpText>
        <label>Is VAT Related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__List_Price__c</fullName>
        <inlineHelpText>List price of product or service sold. Used typically in conjunction with discount field to try and convey to customer that they are extra special and are getting a heck of a deal.</inlineHelpText>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Opportunity_Product_Id__c</fullName>
        <inlineHelpText>The Id of the opportunity product this billing line was sourced.</inlineHelpText>
        <label>Opportunity Product Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Parent_Status__c</fullName>
        <formula>TEXT(AcctSeed__Billing__r.AcctSeed__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Status of the Billing that the Billing Line is related to</inlineHelpText>
        <label>Parent Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Product_Tax_Type__c</fullName>
        <formula>TEXT(AcctSeed__Product__r.AcctSeed__Accounting_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Tax Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Product_Unit_Cost__c</fullName>
        <description>Overrides the unit cost set on the product in the posting process if populated.</description>
        <inlineHelpText>Overrides the unit cost set on the product in the posting process if populated. This feature requires product costing on the Accounting Settings tab to be enabled.</inlineHelpText>
        <label>Product Unit Cost</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to Salesforce Products. Drives GL Revenue Account if selected and no Revenue GL Account is selected in the Billing Line. Also drives GL Account Variables on transaction line if no Project Task is selected on the Billing Line.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Billing Lines</relationshipLabel>
        <relationshipName>Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Work break down structure for projects, such as: Phases, Deliverables or Roles. Drives Revenue GL Account and GL Account Variables when Posting to the Transaction object if populated.</inlineHelpText>
        <label>Project Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Project_Task__c.AcctSeed__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.AcctSeed__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Project_Task__c</referenceTo>
        <relationshipLabel>Billing Lines</relationshipLabel>
        <relationshipName>Project_Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Project the Billing Line is related to</inlineHelpText>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Billing Lines</relationshipLabel>
        <relationshipName>Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Rate__c</fullName>
        <inlineHelpText>Required- Product or Service Rate</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Recurring_Billing_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Billing Line</label>
        <referenceTo>AcctSeed__Recurring_Billing_Line__c</referenceTo>
        <relationshipLabel>Billing Lines</relationshipLabel>
        <relationshipName>Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Revenue_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Upon posting a credit entry will be made to this GL Account and a corresponding debit entry will be made to the AR Control Account set in the Accounting Settings Tab.</inlineHelpText>
        <label>Revenue GL Account</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Revenue</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Billing Lines</relationshipLabel>
        <relationshipName>Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Sub_Total__c</fullName>
        <formula>AcctSeed__Rate__c  *  AcctSeed__Hours_Units__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Quantity x Unit Price for the Billing Line</inlineHelpText>
        <label>Sub-Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Tax_Amount2__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated based on Sub-Total x Tax Group&apos;s Combined Tax Rate on Billing Line, unless using AvaTax.</inlineHelpText>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Tax_Amount__c</fullName>
        <description>Deprecated in version 1.17</description>
        <inlineHelpText>Deprecated in version 1.17</inlineHelpText>
        <label>zDep-Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Tax_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If using native tax functionality, this determines the Combined Tax Rate percentage and the tax GL mappings and is used to calculate the Tax Amount.</inlineHelpText>
        <label>Tax Group</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <filterItems>
                <field>AcctSeed__Tax_Group__c.AcctSeed__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>AcctSeed__Tax_Group__c.AcctSeed__Tax_Type__c</field>
                <operation>equals</operation>
                <value>Sales</value>
            </filterItems>
            <filterItems>
                <field>AcctSeed__Tax_Group__c.AcctSeed__Tax_Type__c</field>
                <operation>equals</operation>
                <value>Sales and Purchase</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Tax_Group__c</referenceTo>
        <relationshipLabel>Billing Lines</relationshipLabel>
        <relationshipName>Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Tax_Line__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Tax_Rate__c</fullName>
        <formula>IF(AcctSeed__Sub_Total__c = 0, 0 ,AcctSeed__Tax_Amount2__c / AcctSeed__Sub_Total__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Tax rate percentage used to calculate tax amount.</inlineHelpText>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Time_Card_Variable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to track additional information on Time Card Lines for services billings when more data is required than Project and Project Task. This is a global variable not specific to a single project.</inlineHelpText>
        <label>Time Card Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Time Card Variable 1</value>
            </filterItems>
            <infoMessage>The Accounting Variable must have a Type of &quot;Time Card  Variable 1&quot;.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Billing Lines</relationshipLabel>
        <relationshipName>Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Time_Card_Variable_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to track additional information on Time Card Lines for services billings when more data is required than Project and Project Task. This is a global variable not specific to a single project.</inlineHelpText>
        <label>Time Card Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Time Card Variable 2</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Billing Lines (Time Card Variable 2)</relationshipLabel>
        <relationshipName>Billing_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Total_Before_Tax__c</fullName>
        <description>Deprecated in version 1.17</description>
        <formula>AcctSeed__Hours_Units__c * AcctSeed__Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zDep-Total Before Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Total__c</fullName>
        <formula>AcctSeed__Sub_Total__c +  AcctSeed__Tax_Amount2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Billing Line Total: Hours * Units + Tax</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to Credit side of related transaction created in the posting process.</inlineHelpText>
        <label>zDep-Transaction</label>
        <referenceTo>AcctSeed__Transaction__c</referenceTo>
        <relationshipLabel>Billing Lines</relationshipLabel>
        <relationshipName>Project_Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AvaAcctSeed__Details__c</fullName>
        <inlineHelpText>Jurisdictions that were applied to the SalesTax Calculation, including name and rate. Cannot be Edited.</inlineHelpText>
        <label>Sales Tax Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AvaAcctSeed__LineTax__c</fullName>
        <inlineHelpText>Sales Tax Calculated For This Line - Cannot Be Edited</inlineHelpText>
        <label>Sales Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AvaAcctSeed__Rate__c</fullName>
        <inlineHelpText>Tax Rate applied to this line. Cannot be Edited</inlineHelpText>
        <label>Sales Tax Rate</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Amount_Received__c</fullName>
        <formula>AcctSeed__Billing__r.AcctSeed__Received_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount of the Billing Borrego has received</inlineHelpText>
        <label>Billing Amount Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Total__c</fullName>
        <formula>AcctSeed__Billing__r.AcctSeed__Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Amount of the Billing the Billing Line is related to</inlineHelpText>
        <label>Billing Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <description>pulls type of case from the related SV/Case, used mostly for reporting buckets, no need to put on layout</description>
        <formula>IF( 
  AcctSeed__GL_Account_Variable_4__r.Id = &quot;a1m80000000p2ki&quot;, &quot;Fixed&quot;,
  Case__r.RecordType.Name 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls type of case from the related SV/Case, used mostly for reporting buckets, no need to put on layout</inlineHelpText>
        <label>Case Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Billing Lines</relationshipLabel>
        <relationshipName>Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <inlineHelpText>Categorize the Billing Line - for O&amp;M Billings</inlineHelpText>
        <label>Tax Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cell Modem Plan</fullName>
                    <label>Cell Modem Data Plan</label>
                </value>
                <value>
                    <fullName>Data Storage</fullName>
                </value>
                <value>
                    <fullName>Drive Time/Travel - Internal</fullName>
                </value>
                <value>
                    <fullName>Drive Time/Travel - Sub-C</fullName>
                </value>
                <value>
                    <fullName>Electronic Output</fullName>
                </value>
                <value>
                    <fullName>Engineering Services</fullName>
                </value>
                <value>
                    <fullName>Equipment Rental/Leases</fullName>
                </value>
                <value>
                    <fullName>Insulation Testing</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Labor - Internal</fullName>
                </value>
                <value>
                    <fullName>Labor - Sub-C</fullName>
                </value>
                <value>
                    <fullName>Module Washing</fullName>
                </value>
                <value>
                    <fullName>Optional Extended Warranties</fullName>
                </value>
                <value>
                    <fullName>Parts/Material</fullName>
                </value>
                <value>
                    <fullName>PeGu</fullName>
                </value>
                <value>
                    <fullName>Reimbursable Expenses</fullName>
                </value>
                <value>
                    <fullName>S&amp;H</fullName>
                </value>
                <value>
                    <fullName>Sales Tax</fullName>
                </value>
                <value>
                    <fullName>Service Contract</fullName>
                </value>
                <value>
                    <fullName>Snow Removal</fullName>
                </value>
                <value>
                    <fullName>Storage Rental</fullName>
                    <label>Storage</label>
                </value>
                <value>
                    <fullName>Vegetation Management</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                    <isActive>false</isActive>
                    <label>Admin</label>
                </value>
                <value>
                    <fullName>Admin Hours</fullName>
                    <isActive>false</isActive>
                    <label>Admin Hours</label>
                </value>
                <value>
                    <fullName>Annual Cell Modem Data Plan</fullName>
                    <isActive>false</isActive>
                    <label>Annual Cell Modem Data Plan</label>
                </value>
                <value>
                    <fullName>Approval Fees</fullName>
                    <isActive>false</isActive>
                    <label>Approval Fees</label>
                </value>
                <value>
                    <fullName>Delivery Charge</fullName>
                    <isActive>false</isActive>
                    <label>Delivery Charge Equip Rental/Lease</label>
                </value>
                <value>
                    <fullName>Device Monitoring/Data Storage and Maintenance</fullName>
                    <isActive>false</isActive>
                    <label>Device Monitoring/Data Storage and Maintenance</label>
                </value>
                <value>
                    <fullName>Drive Time/Travel</fullName>
                    <isActive>false</isActive>
                    <label>Drive Time/Travel</label>
                </value>
                <value>
                    <fullName>Environmental Charge</fullName>
                    <isActive>false</isActive>
                    <label>Environmental Fee Equip Rental/Lease</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Enter a description of the Billing Line</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IncludeinMonthlyStatement__c</fullName>
        <formula>NOT(AcctSeed__Billing__r.AcctSeed__Age__c= &quot;Closed&quot;)
&amp;&amp;
NOT(ISBLANK(AcctSeed__Project__c))
&amp;&amp;
OR(AcctSeed__Revenue_GL_Account__r.Name = &quot;3702-COGS - Non contract Service&quot;,
AcctSeed__Revenue_GL_Account__r.Name = &quot;2306-Deferred Service Income - ST&quot;, 
AcctSeed__Revenue_GL_Account__r.Name = &quot;3102-Revenue - Non contract Service&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include in Monthly Statement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Labor_Billing__c</fullName>
        <description>brings up value from related SV Labor Billing field, used mostly in reporting for bucketing, no need to place on layout</description>
        <formula>TEXT( Service_Visit__r.Billing_Field__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>brings up value from related SV Labor Billing field, used mostly in reporting for bucketing, no need to place on layout</inlineHelpText>
        <label>Labor Billing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_CPQ_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field update to ensure non-CPQ processes do not error out on Billing Line Creation</description>
        <label>Not CPQ Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Product Record from Quote.</inlineHelpText>
        <label>Quote Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Billing Lines (Product2)</relationshipLabel>
        <relationshipName>Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Project_Task__c.AcctSeed__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.AcctSeed__Project__c</valueField>
            </filterItems>
            <filterItems>
                <field>AcctSeed__Project_Task__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Billing Line Item</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Project_Task__c</referenceTo>
        <relationshipLabel>Billing Lines (Project Task)</relationshipLabel>
        <relationshipName>Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line Item</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Billing Lines</relationshipLabel>
        <relationshipName>Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retention__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Retention related to the Billing</inlineHelpText>
        <label>Retention</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AcctSeed__Project__c</field>
                <operation>equals</operation>
                <valueField>Retention__c.Project__c</valueField>
            </filterItems>
            <filterItems>
                <field>Retention__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Billing Retention</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Retention__c</referenceTo>
        <relationshipLabel>Billing Lines</relationshipLabel>
        <relationshipName>Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesTaxRateFormula__c</fullName>
        <formula>IF(LEN(AvaAcctSeed__Rate__c)=2, 
VALUE(LEFT(AvaAcctSeed__Rate__c, 1)), 

IF(LEN(AvaAcctSeed__Rate__c)=3, 
VALUE(LEFT(AvaAcctSeed__Rate__c, 2)), 

IF(LEN(AvaAcctSeed__Rate__c)=4, 
VALUE(LEFT(AvaAcctSeed__Rate__c, 3)), 


IF(LEN(AvaAcctSeed__Rate__c)=5, 
VALUE(LEFT(AvaAcctSeed__Rate__c, 4)), 

IF(LEN(AvaAcctSeed__Rate__c)=5, 
VALUE(LEFT(AvaAcctSeed__Rate__c, 4)), 

IF(LEN(AvaAcctSeed__Rate__c)=6, 
VALUE(LEFT(AvaAcctSeed__Rate__c, 5)), 

0))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Tax Rate Formula</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Service Visit related to the Billing Line- For Service/O&amp;M only</inlineHelpText>
        <label>Service Visit</label>
        <referenceTo>SV__c</referenceTo>
        <relationshipLabel>Billing Lines</relationshipLabel>
        <relationshipName>Billing_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxProductID__c</fullName>
        <formula>IF(AcctSeed__Revenue_GL_Account__r.Name= &quot;2204-Sales tax payable- West&quot;, &quot;01t34000004d6Mk&quot;, 
IF(ISPICKVAL(AcctSeed__Billing__r.Service_Contract__r.SalesTaxExempt__c,&quot;Yes&quot;), &quot;01t34000004d8I7&quot;, 
IF(AcctSeed__Revenue_GL_Account__r.Name= &quot;3702-COGS - Billable&quot;, &quot;01t34000004d8I7&quot;, 
IF(CONTAINS(AcctSeed__Revenue_GL_Account__r.Name, &quot;Sales Tax&quot;), &quot;01t34000004d8I7&quot;, 
IF(ISPICKVAL(Category__c, &quot;S&amp;H&quot;), &quot;01t34000004d7qX&quot;, 
IF(ISPICKVAL(Category__c, &quot;Electronic Output&quot;), &quot;01t34000004d6N4&quot;, 
IF(ISPICKVAL(Category__c, &quot;Optional Extended Warranties&quot;), &quot;01t34000004d7qI&quot;, 
IF(ISPICKVAL(Category__c, &quot;Reimbursable Expenses&quot;), &quot;01t34000004d7qS&quot;, 
IF(ISPICKVAL(Category__c, &quot;Parts/Material&quot;), &quot;01t34000004d7qN&quot;, 
IF(ISPICKVAL(Category__c, &quot;Equipment Rental/Leases&quot;), &quot;01t34000004d7q3&quot;, 
IF(ISPICKVAL(Category__c, &quot;Cell Modem Plan&quot;), &quot;01t34000004d6Mp&quot;, 
IF(ISPICKVAL(Category__c, &quot;Data Storage&quot;), &quot;01t34000004d6Mu&quot;, 
IF(ISPICKVAL(Category__c, &quot;Engineering Services&quot;), &quot;01t34000004d6N9&quot;, 
IF(ISPICKVAL(Category__c, &quot;Vegetation Management&quot; ), &quot;01t34000004d7qm&quot;, 
IF(ISPICKVAL(Category__c, &quot;Snow Removal&quot; ), &quot;01t34000004d7qc&quot;, 
IF(ISPICKVAL(Category__c, &quot;Storage&quot; ), &quot;01t34000004d7qh&quot;, 
IF(ISPICKVAL(Category__c, &quot;Non-Taxable&quot;), &quot;01t34000004d8I7&quot;, 
IF(ISPICKVAL(Category__c, &quot;&quot;), &quot;&quot;, 
&quot;01t34000004d7q8&quot;))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the Billing Line Taxable? Checked = Yes, Not Checked = NO</inlineHelpText>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>